	y margin slightly to allow more space for descenders.

	* src/scanner.c (get_num):  More robust parsing of really big integer
	constants.  E.g.  "print 0x12345678901234567890"
	Use strtod() rather than atof() so that the parser's position in the
	input line is tracked.  Also, do not assume that integers are
	necessarily 32-bits.

2017-07-05  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/qtterminal/QtGnuplotScene.cpp:  Qt::Align{Foo} are bit
	definitions, not integers.  Therefore tests should be of the form
	(alignment & Qt::AlignRight) rather than (alignment == Qt::AlignRight).

2017-07-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (set_term init_terminal) src/unset.c (unset_terminal)
	docs/gnuplot.doc:
	On entry, copy environmental variable GNUTERM to internal variable
	GNUTERM.  Note that starting with version 5.2 this is a string that
	may include terminal options in addition to the terminal name. E.g.
	    GNUTERM="post eps color size 5in,3in" 
	Modify "set term <string>" to look only at the first word of <string>.
	Thus "set term GNUTERM" works as before. Note that "set term @GNUTERM"
	expands and applies the full set of options.
	Fix "unset term" to act equivalently to "set term GNUTERM" as
	documented.

	* src/eval.c (set_gpval_axis_sth_double):  Remove unused parameter.

	* configure.ac docs/Makefile.am term/caca.trm:
	Add caca terminal documentation to the user manual.  Fix segfault on
	"set term caca driver raw".

2017-07-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c src/win/wgdiplus.cpp
	src/win/wd2d.cpp:  Use a common definition of GWOPMAX and increase
	to accomodate e.g. typicall pm3d plots.

2017-07-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm:  Cannot use docked graph windows in persist mode as
	the text window will not be shown.

	* src/internal.c:  Windows time() implementation with sub-second
	resolution.

	* src/win/wgdiplus.cpp:  Switching the compositing mode to take the